# t-regs

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
demo/: grouped_regularization.ipynb
src/t_regs/gsp/: __init__.py  generate_connected_graph.py
src/t_regs/gsp/regularization/: gvr.py
src/t_regs/gsp/visualization/: gsp_vis.py
src/t_regs/manifolds/: __init__.py  euclidean.py  generalized_steifel.py  manifold.py  steifel.py
src/t_regs/models/matrix_decomp/: generalized_svd.py
src/t_regs/models/pca/: base.py  kernel_pca.py  pca.py
src/t_regs/models/regression/: linear_regression.py  regression_base.py  tucker_regression.py
src/t_regs/multilinear_ops/: cp.py  graph_linear_ops.py  matricization.py  mode_svd.py  tensor_products.py
src/t_regs/optimization_algs/: cma_es.py  conjugate_gradient.py
src/t_regs/proximal_ops/: proj_l1_ball.py  prox_gtv.py  prox_logn.py  prox_lp_lq.py  prox_tnn.py  singular_value_thresholding.py  soft_threshold.py  weighted_prox_l1.py
src/t_regs/solvers/: admm_base_class.py  cma_es_abc.py  conjugate_gradient.py  lasso.py  logistic_lasso.py  metric_tracker.py  proximal_gradient_base.py
src/t_regs/synthetic_data/: contaminate_data.py  generate_anomaly.py  generate_lr_data.py  qmult.py  regression.py
src/t_regs/utils/: __init__.py  estimate_spectral_norm.py  matrix_rank_estimation.py  printer.py
src/tensor_regressor/gsp/: graph.py
src/tensor_regressor/kernels/: base_kernel.py
src/tensor_regressor/multilinear_ops/: __init__.py  matricization.py  mode_svd.py  tensor_products.py  tensor_projection_depth.py  tucker.py
src/tensor_regressor/optimization_algs/: als_base_class.py  cma_es_abc.py
src/tensor_regressor/proximal_ops/: __init__.py  prox_lp_lq.py  prox_overlapping_grouped_l21.py  singular_value_thresholding.py
src/tensor_regressor/synthetic_data/: __init__.py  gen_lr_smooth_data.py
src/tensor_regressor/utils/: sparse_array_conversion.py
tests/: quicktb.ipynb  test_mode_product.py  test_synthetic_data.py  test_tensor.py
(+25 files in other folders)
